# openphone-client-python

./: .gitignore  =0.9  CHANGELOG.md  README.md  agents.md  openapi-config.yml  pyproject.toml  todo.md
docs/: test_example.py  wrapper-map.md  wrapper_example.py
examples/: smoke_everything.py  smoke_plumbing.py  smoke_wrapper.py
openphone_sdk/: __init__.py  create_call_summary_webhook.py  create_call_transcript_webhook.py  create_call_webhook.py  create_contact.py  create_message_webhook.py  delete_contact.py  delete_webhook_by_id.py  get_call_recordings.py  get_call_summary.py  get_call_transcript.py  get_contact_by_id.py  get_contact_custom_fields.py  get_message_by_id.py  get_webhook_by_id.py  list_calls.py  list_contacts.py  list_conversations.py  list_messages.py  list_phone_numbers.py  list_webhooks.py  request.py  send_message.py  update_contact_by_id.py  validate.py
quo_client/: __init__.py
quo_sdk/: __init__.py  create_call_summary_webhook.py  create_call_transcript_webhook.py  create_call_webhook.py  create_contact.py  create_message_webhook.py  delete_contact.py  delete_webhook_by_id.py  get_call_recordings.py  get_call_summary.py  get_call_transcript.py  get_contact_by_id.py  get_contact_custom_fields.py  get_message_by_id.py  get_webhook_by_id.py  list_calls.py  list_contacts.py  list_conversations.py  list_messages.py  list_phone_numbers.py  list_webhooks.py  request.py  send_message.py  update_contact_by_id.py  validate.py
scripts/: check_spec_table.py  spec_table.py
spec/: endpoints.md
tests/: test_create_call_summary_webhook.py  test_create_call_transcript_webhook.py  test_create_call_webhook.py  test_create_contact.py  (+19 more)
(+516 files in other folders)
