[tool.poetry]
name = "openphone-client"
version = "1.0.0"
description = "A client library for accessing OpenPhone Public API"
authors = []
readme = "README.md"
packages = [
    {include = "openphone_client"},
]
include = ["CHANGELOG.md", "openphone_client/py.typed"]


[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.mypy]
strict = true
[tool.poetry.group.dev.dependencies]   # <-- add this
pytest = "^8.2"
pytest-httpx = "^0.30"
